--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       padding: 0;
       height: 100%;
       font-family: Arial, sans-serif;
-      overflow: hidden;
     }
 
     .background {
@@ -32,13 +31,13 @@
       align-items: center;
       justify-content: center;
       text-align: center;
-      padding: 40px;
+      padding: 20px;
       color: white;
     }
 
     .content {
       background-color: rgba(0, 0, 0, 0.5);
-      padding: 40px 60px;
+      padding: 40px 20px;
       border-radius: 12px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
     }
@@ -87,7 +86,7 @@
       </div>
       <footer>
         <p>Website &copy; <span id="yearEl"></span></p>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdczth3mwALp36umYiyfvQNNTOiTBKgFFhiOZy1RlLlot6_Dg/viewform?usp=sf_link">Contact us</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdczth3mwALp36umYiyfvQNNTOiTBKgFFhiOZy1RlLlot6_Dg/viewform?usp=sf_link">Contact</a>
       </footer>
       <script>
         yearEl.innerHTML = new Date().getFullYear();
