--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
 
     ul {
       text-align: left;
+      list-style: none;
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 5px;
     }
 
     footer {
@@ -79,9 +85,9 @@
       <div class="description">
         A retro video game-centric keepsake photo service, built exclusively for convention-goers at events like <strong>Classic Game Fest</strong> in Austin, Texas.
         <ul>
-          <li>👾 Perfect for cosplayers, families, and friends.</li>
-          <li>📸 Quick and easy — just smile, snap, and enjoy!</li>
-          <li>🕹️ Instant digital download.</li>
+          <li>👾 &nbsp;Perfect for cosplayers, families, and friends.</li>
+          <li>📸 &nbsp;Quick and easy — just smile, snap, and enjoy!</li>
+          <li>🕹️ &nbsp;Instant digital download.</li>
         </ul>
       </div>
       <footer>
