--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
       color: white;
     }
 
+    @media (max-width: 480px)  {
+      .overlay {
+        height: initial;
+      }
+    }
+
     .content {
       background-color: rgba(0, 0, 0, 0.5);
       padding: 40px 20px;
