--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       </div>
       <footer>
         <p>Website &copy; <span id="yearEl"></span></p>
+        <p>This website does not use cookies.</p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdczth3mwALp36umYiyfvQNNTOiTBKgFFhiOZy1RlLlot6_Dg/viewform?usp=sf_link">Contact</a>
       </footer>
       <script>
