--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
           }
 
           showRemaining();
+
+          timer = setInterval(showRemaining, 60000);
         })();
       </script>
     </div>
