--- a/index.html
+++ b/index.html
@@ -96,17 +96,16 @@
   <div class="background"></div>
   <div class="overlay">
     <div class="content">
-      <div class="logo">HeyGameBoy</div>
+      <div class="logo">jumpswap</div>
       <div class="description">
-        <p>On-site retro game console repair, offered live at conventions like <strong>Classic Game Fest</strong> in Austin, Texas.</p>
-        <div id="countdownContainerEl" style="display: none;">
+        <p><strong>jumpswap</strong> is an on-site order fulfillment system built for repair services at events like <strong>Classic Game Fest</strong> in Austin, Texas.</p>
+        <div id="countdownContainerEl">
           <span id="countdownEl"></span> until CGF 2025!
         </div>
         <ul>
-          <li>🔧 &nbsp;Expert repairs for Game Boy, NES, SNES, and more.</li>
-          <li>⚡ &nbsp;Same-day pickup for most repairs.</li>
-          <li>🕹️ &nbsp;Custom Game Boy Kits, rare games, and accessories.</li>
-          <li>📬 &nbsp;Get a repair quote or Etsy link if you forgot your console!</li>
+          <li>📲 &nbsp;Easily track incoming repairs and ready-for-pickup status.</li>
+          <li>📦 &nbsp;Streamlined fulfillment for same-day or next-day service.</li>
+          <li>🧾 &nbsp;Digital work order management on the spot.</li>
         </ul>
       </div>
       <footer>
