--- a/index.html
+++ b/index.html
@@ -52,16 +52,21 @@
 
     .description {
       font-family: Arial, sans-serif;
-      font-size: 18px;
+      font-size: 16px;
       line-height: 1.6;
       max-width: 500px;
       margin: 0 auto;
+    }
+
+    p {
+      margin: 20px 0;
     }
 
     ul {
       text-align: left;
       list-style: none;
       padding-left: 20px;
+      margin-bottom: 95px;
     }
 
     li {
