--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-  <title>HeyGameBoy</title>
+  <title>jumpswap</title>
   <style>
     html, body {
       margin: 0;
@@ -66,7 +66,7 @@
       text-align: left;
       list-style: none;
       padding-left: 20px;
-      margin-bottom: 95px;
+      margin-bottom: 75px;
     }
 
     li {
