--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
           <span id="countdownEl"></span> until CGF 2025!
         </div>
         <ul>
-          <li>📲 &nbsp;Easily track incoming repairs and ready-for-pickup status.</li>
-          <li>📦 &nbsp;Streamlined fulfillment for same-day or next-day service.</li>
-          <li>🧾 &nbsp;Digital work order management on the spot.</li>
+          <li>🖨️ &nbsp;Print receipts with custom templates.</li>
+          <li>🧾 &nbsp;Add notes for quick reference.</li>
+          <li>🧑 &nbsp;Multi-user, multi-booth support.</li>
         </ul>
       </div>
       <footer>
